src/style.css
 *  { 
    outline: 2px solid red;
}
@font-face { 
    font-family: "MainFont";
    src: url("../fonts/Razing.ttf");
}

body {
    height: auto;
    padding: 0;
    margin: 0;
    background-color: rgb(0, 0, 0);
}

.MainPage {
    height: auto;
    display: grid;
    grid-template-columns: minmax(600px, auto);
    grid-template-rows: repeat(3, auto);
    justify-items: center;
    justify-content: center;
}

.MenuNavHeader {
    height: 100px;
    width: max(500px, 50vw);
    display: grid;
    justify-items: center;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    background-color: rgb(255, 255, 255);
    border-bottom: 4px solid rgb(0, 0, 0);
} 

.NavMenu { 
    width: 500px;
    display: grid; 
    grid-template-columns: 50px, 50px, 50px;
    grid-template-rows: 50px;
    justify-items: center;
    align-content: center;
    align-items: center;
}

button[id] { 
    width: 150px;
    height: 50px;
    border-radius: 25px;
    cursor: pointer;
    border: 2px solid black;
    box-shadow: 0 5px 5px rgb(0, 0, 0, 0.5);
    font-family: MainFont;
    font-size: 18px;
    background-color: rgb(255, 255, 255);
}

#HomeButton { 
    grid-column: 1;
}

#MenuButton {
    grid-column: 2;
}

#ContactButton { 
    grid-column: 3;
}

button[id]:hover { 
    background-color: rgb(101, 101, 101);
}

.ActiveButton { 
    border: 2px solid rgb(0, 0, 0);
    color: rgb(255, 255, 255);
}

.ContentSection { 
    grid-row: 2;
    background-color: rgb(0, 0, 0);
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
    place-items: center;
    place-content: center;
    
}


.FooterDiv { 
    background-color: rgb(0, 0, 0);
    grid-row: 3;
    color: white;
    font-size: 10px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
    place-items: center;
    place-content: center;
}



/* Custom Made classes for appended elements */

.HomeDiv { 
    display: grid;
    grid-template-rows: 200px 1fr;
    grid-template-columns: 1fr;
    justify-items: center;
    align-items: center;
    align-content: center;
    justify-content: center;
    color: rgb(0, 0, 0);
}

.HeaderDiv { 
    font-family: MainFont;
    color: rgb(255, 255, 255);
    text-align: center;
    height: auto;
    width: 300px;
    display: grid;
    grid-template-rows: auto auto;
    align-items: center;
    align-content: center;
}

#HomeHeader {
    font-size: 80px;
    margin: 0;
}

#HomeMiniHeader { 
    margin: 0;
    font-size: 24px;
}

/* Restaurant Div setting for repeating columns */
.RestaurantDivs {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    grid-template-rows: 1fr;
    justify-content: space-evenly;
    row-gap: 20px;
    color: rgb(0, 0, 0);
    justify-items: center;
    width: max(500px, 85vw);
}

/*About the Restaurant + Styles*/
.AboutDiv { 
    display: grid;
    grid-template-rows: 200px 1fr;
    grid-template-columns: 1fr;
    border-radius: 40px;
    background-color: rgb(255, 255, 255);
    height: max(500px, 20vh);
    width: max(500px, 40vw);
}

/* Restaurant Hours + Styles */
.HoursDiv { 
    display: grid;
    grid-template-rows: 200px 1fr;
    grid-template-columns: 1fr;
    border-radius: 40px;
    background-color: rgb(255, 255, 255);
    height: max(500px, 20vh);
    width: max(500px, 40vw);
}

/* Restaurant Location + Styles */
.LocationDiv {
    display: grid;
    grid-template-rows: 200px 1fr;
    grid-template-columns: 1fr;
    border-radius: 40px;
    background-color: rgb(255, 255, 255);
    height: max(500px, 20vh);
    width: max(500px, 40vw);
}





/* Menu Div + settings */
.MenuDiv { 
    display: grid;
    grid-template-rows: 150px 1fr;
    grid-template-columns: 1fr;
    justify-items: center;
    color: rgb(255, 255, 255);
}

#MenuHeader { 
    font-size: 54px;
    font-family: MainFont;
}

/* For both the menus */
.Menus { 
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 630px));
    grid-template-rows: 1fr;
    gap: 15px;
    justify-content: center;
    justify-items: center;
    width: max(600px, 85vw);
}


/* All Day Menu boxes + styles */
.AllDayMenuDiv { 
    display: grid;
    background-color: white;
    border-radius: 30px;
    width: max(400px, 40vw);
    height: max(450px, 80vh);
}

.AllDayMenuBox { 
    width: auto;
    height: auto;
    margin: 15px;
    background-color: black;
    color: white;
    border-radius: 30px;
    display: grid;
    grid-template-columns: 1fr; 
    grid-template-rows: repeat(auto-fit, auto);
}

#AllDayBoxHeader { 
    font-size: 42px;
    font-family: MainFont;
}





/* Sides Menu boxes + styles */
.SidesDrinksMenuDiv { 
    display: grid;
    background-color: white;
    border-radius: 30px;
    width: max(400px, 40vw);
    height: fit-content;
}

.SidesMenuBox { 
    width: auto;
    height: max-content;
    margin-left: 15px;
    margin-right: 15px;
    margin-top: 15px;
    background-color: black;
    color: white;
    border-radius: 30px;
    display: grid;
    grid-template-columns: 1fr; 
    grid-template-rows: repeat(auto-fit, auto);
    justify-items: center;
}

#SidesBoxHeader {
    height: 40px;
    font-family: MainFont;
    font-size: 42px;
    margin: 10px;
    justify-self: center;
}

.SidesMenuDetailsBox { 
    width: auto;
    height: auto;
    font-family: MainFont;
    margin: 10px;
    margin-top: 0;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
}

#SidesDetailsItems, #SidesDetailsPrices { 
    white-space: pre;
    margin: 0;
}

#SidesDetailsPrices { 
    text-align: end;
}

/* Drinks Menu boxes + styles */
.DrinksMenuBox { 
    width: auto;
    height: auto;
    margin-top: 5px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 15px;
    background-color: black;
    color: white;
    border-radius: 30px;
    display: grid;
    grid-template-columns: 1fr; 
    grid-template-rows: repeat(auto-fit, 1fr);
    justify-items: start;
}

#DrinksBoxHeader {
    font-family: MainFont;
    font-size: 42px;
    margin: 10px;
    justify-self: center;
}

.DrinksMenuDetailsBox { 
    margin: 10px;
    margin-top: 0;
}

#DrinksDetailsItems, #DrinksDetailsPrices { 
    white-space: pre;
}




/* Contact Divs + settings */

.ContactDiv { 
    display: grid;
    grid-template-rows: 150px 1fr;
    grid-template-columns: 1fr;
    justify-items: center;
    color: rgb(255, 255, 255);
}

#ContactHeader { 
    font-size: 50px;
    font-family: MainFont;
    text-align: center;
}

.ContactMainDiv { 
    color: white;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 630px));
    grid-template-rows: 1fr;
    gap: 15px;
    justify-content: center;
    justify-items: center;
    width: max(600px, 85vw);
}

.PhoneContactDiv {
    display: grid;
    background-color: white;
    border-radius: 30px;
    width: max(400px, 40vw);
    height: max(450px, 30vh);
}

.OrderHereDiv { 
    display: grid;
    background-color: white;
    border-radius: 30px;
    width: max(400px, 40vw);
    height: max(450px, 30vh);
}

#PhoneBox { 
    font-family: MainFont;
    background-color: black;
    border-radius: 30px; 
    margin: 15px;
    padding: 15px;
    display: grid;
    grid-template-columns: auto; 
    grid-template-rows: repeat(auto-fit, 50px);
    justify-items: start;
    align-items: start;
}

#PhoneContactHeader { 
    font-size: 32px;
}

#PhonePara { 
    font-size: 18px;
}


#OrderBox { 
    font-family: MainFont;
    background-color: black;
    border-radius: 30px; 
    margin: 15px;
    padding: 15px;
    height: auto;
    display: grid;
    grid-template-columns: auto; 
    grid-template-rows: repeat(auto-fit, 1fr);
    justify-items: start;
    align-items: start;
}

#OrderHeader { 
    font-size: 36px;
}

.InstaTagBox { 
    width: auto;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 35px 1fr;
    align-items: center;
}

#InstaHeader { 
    grid-column: span 2;
    margin: 0;
    font-size: 32px;
}
#InstaPara { 
    grid-column: 2;
    font-size: 16px;
}

#InstaLogo { 
    grid-column: 1;
    grid-row: 2;
    width: 30px;
    height: 30px;
    filter: invert();
}

.TikTokTagBox {
    width: auto;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 35px 1fr;
    align-items: center;
}

#TikTokHeader { 
    margin: 0;
    padding: 0;
    grid-column: span 2;
    font-size: 32px;
}

#TikTokPara { 
    font-size: 16px;
    grid-row: 2;
    grid-column: 2;
}

#TikTokLogo { 
    grid-row: 2;
    grid-column: 1;
    width: 30px;
    height: 30px;
    filter: invert();
}

